Fix alignment of icon images in the menu

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -90,7 +90,7 @@
 
 #menu img.icon {
   line-height: 1;
-  margin: 0 0.2em;
+  margin: 0 0.5em -.05em 0.25em;
   width: 1em;
 }
 
